# PongAI

./: .dockerignore  .env.default  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint.sh  local.env  main.cpp
Player/: CMakeLists.txt
app/: CMakeLists.txt  player.cpp  referee.cpp
include/PongAI/: administrator.hpp  ball.hpp  default_include.hpp  entity.hpp  field.hpp  game_invite.hpp  heartbeat.hpp  location.hpp  paddle.hpp  participant.hpp  player.hpp  referee.hpp  util.hpp
include/PongAI/messaging/: administrator.hpp  entity.hpp  participant.hpp
include/PongAI/messaging/messages/: game_invite.hpp  game_state.hpp  heartbeat.hpp
include/PongAI/pong/: engine.hpp  location.hpp  player.hpp  referee.hpp
include/PongAI/pong/messages/: action.hpp  game_state.hpp
include/PongAI/pong/messaging/messages/: game_state.hpp
include/PongAI/pong/objects/: ball.hpp  field.hpp  goal.hpp  object.hpp  paddle.hpp
src/: CMakeLists.txt  util.cpp
src/entity/: administrator.cpp  entity.cpp  game_invite.cpp  participant.cpp  player.cpp  referee.cpp
src/messages/: game_invite.cpp  heartbeat.cpp
src/messaging/: administrator.cpp  entity.cpp  participant.cpp
src/messaging/messages/: game_invite.cpp  heartbeat.cpp
src/objects/: ball.cpp  field.cpp  paddle.cpp
src/pong/: player.cpp  referee.cpp
src/pong/messages/: action.cpp  game_state.cpp
src/pong/objects/: ball.cpp  field.cpp  goal.cpp  object.cpp  paddle.cpp
tests/: CMakeLists.txt  hello_test.cpp
